--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,10 @@
 body {
     font-family: 'Poppins', sans-serif;
     background: var(--color-bg);
+
     color: var(--color-white);
     line-height: 1.7;
-    background-image: url(../src/assets/bg-texture.png);
+    background-image: url(../src/assets/bg2.png);
 
 }
 
